fix :: cors configuration